# zipline-pyspark

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.json  release-drafter.yml  release.yml
.github/workflows/: ci.yml  publish_release.yml  release_drafter.yml  semver-label-check.yml  sync_labels.yml
examples/: databricks.ipynb  gcp.ipynb  gcp_staging_query.ipynb
scripts/: build_release_wheel.sh  copy_jars.sh
src/ai/chronon/pyspark/: batch.py  jupyter.py
tests/: conftest.py  test_batch.py  test_canary.py  test_databricks_group_by.py  test_databricks_join.py  test_databricks_staging_query.py  test_group_by_executor.py  test_join_executor.py  test_jupyter.py  test_session.py
tests/canary/: README.md  deprecated_teams.json  teams.py
tests/canary/group_bys/aws/: dim_listings.py  dim_merchants.py  item_event_canary.py  logging_schema.py  purchases.py  user_activities.py  user_activities_chained.py
tests/canary/group_bys/azure/: dim_listings.py  dim_merchants.py  logging_schema.py  purchases.py  user_activities.py  user_activities_chained.py
tests/canary/group_bys/gcp/: dim_listings.py  dim_merchants.py  item_event_canary.py  logging_schema.py  purchases.py  team_default_ns_gb.py  user_activities.py  user_activities_chained.py
tests/canary/group_bys/quickstart/: dim_listings.py  dim_merchants.py  user_activities.py
tests/canary/joins/aws/: demo.py  demo_chaining.py  demo_parent.py  item_event_join.py  training_set.py
tests/canary/sample_data/: demo_chaining_v1.yaml  exports.yaml  exports_with_expect.yaml  logging_schema.yaml
tests/integration/: conftest.py  test_databricks_staging_query.py  test_staging_query.py  warehouse.py
tests/resources/jars/: .gitkeep
(+211 files in other folders)
