[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "zipline-pyspark"
version = "0.1.0"
description = "Notebook execution utilities for Zipline AI"
requires-python = ">= 3.7"
dependencies = [
    "zipline-ai",
    "pyspark>=3.5",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "flake8>=7.0",
    "flake8-docstrings",
    "mypy>=1.8",
    "autoflake>=2.2",
    "isort>=5.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.0",
]

[project.urls]
homepage = "https://zipline.ai"
github = "https://github.com/zipline-ai/zipline-pyspark/"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["ai"]
skip_glob = ["tests/canary/*"]

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90 -m 'not integration'"
markers = ["integration: requires a cloud JAR; run with pytest -m integration tests/integration/"]

[tool.coverage.report]
show_missing = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
